fixed support form text alignment

--- a/css/app.css
+++ b/css/app.css
@@ -91,6 +91,10 @@ header {
     border: 0;
   }
 
+  .formFieldComment{
+    padding-top: 10px;
+  }
+
   #downloadform {
     margin-top: 140px;
   }
